welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:20: error: Missing closing brace `}' assumed here
		setCouleurBrosse(c);
                ^PatternPicture:66: error: Missing closing brace `}' assumed here
				}
                                ^